[package]
name = "rust_evm_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
ethers = { version="2.0.14", features = ["abigen", "rustls", "solc"]}
ethers-contract = "2.0.14"
ethers-core = "2.0.14"
eyre = "0.6.12"
tokio = { version="1.39.2",  features = ["full"] }
toml = "0.8.17"
